--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 </head>
 <body>
-    <!-- <img src="https://static.wixstatic.com/media/78c2eb_0f3d88ee33a44e439254f84b0521a0ae~mv2.jpg" alt=""/> -->
-    <a-scene>
+    <img src="https://static.wixstatic.com/media/78c2eb_0f3d88ee33a44e439254f84b0521a0ae~mv2.jpg" alt=""/>
+    <!-- <a-scene>
         <img id="panorama" src="christ-redeemer.jpg"/>
         <a-sky src="#panorama" rotation="0 -90 0"></a-sky>
-    </a-scene>
+    </a-scene> -->
     
 </body>
 </html>
