--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- <img src="https://static.wixstatic.com/media/78c2eb_0f3d88ee33a44e439254f84b0521a0ae~mv2.jpg" alt=""/> -->
     <a-scene>
-        <img id="panorama" src="christ-redeemer.jpg"/>
+        <img id="panorama" src="machu-picchu.jpg"/>
         <a-sky src="#panorama" rotation="0 -90 0"></a-sky>
     </a-scene>
     
