--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>360 Degree View</title>
+    <title>360 Degree VR View</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.0.4/aframe.js" integrity="sha512-UpqpXUuK8DzhknJ0rpgN/Ybdd/SE8JWyGhrCYJIxEJX8c4H9M4VOJ8uvwepxPvARPYiAxHZar7MLh9An015Z/w==" crossorigin="anonymous"></script>
     
 
